# codex-multi-workspace

./: Cargo.toml  Dockerfile.codex-ws  LICENSE  README.md  codex-ws-entrypoint.sh  plan.md
.github/workflows/: publish-image.yml  release.yml
docs/: plan.md
src/: app.rs  cli.rs  config.rs  docker.rs  lib.rs  main.rs  manifest.rs  provider.rs  runtime.rs  workspace.rs
