[package]
name = "codex-multi-workspace"
version = "0.3.3"
edition = "2024"
description = "Run Codex CLI in Docker across saved single-folder or multi-folder workspaces."
license = "MIT"
repository = "https://github.com/Honahec/codex-multi-workspace"
readme = "README.md"

[lib]
name = "codex_ws"

[[bin]]
name = "codex-ws"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
